footer attached to bottom, fixed rubricator overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -31,14 +31,13 @@ html {
   -moz-user-select: none;
   -webkit-user-select: none;
   user-select: none;
+
+  height: 100%;
 }
 
-/* .App {
-  display: flex;
-  flex-direction: column;
-  flex: 1;
-  overflow: hidden;
-} */
+#root {
+  height: 100%;
+}
 
 #mainPanel {
   display: flex;
@@ -157,10 +156,16 @@ html {
 .case-list-wrapper {
   display: flex;
   flex-direction: column;
+
   min-height: 465px;
+  max-height: 534px;
+  overflow-y: scroll;
+
+  padding-top: 5px;
+
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   border-radius: 0px 10px 10px 0px;
-  padding-top: 5px;
+
   background-color: #fff;
   color: #5c5f6d;
 }
@@ -467,8 +472,9 @@ Button {
   text-align: center;
   font-size: 14px;
   font-family: "Regular";
-  height: 100%;
-  bottom: 0;
+  height: max-content;
+  margin-top: auto;
+  margin-bottom: 4px;
   width: 100%;
   text-decoration: none;
   color: #5c5f6d;
@@ -1854,4 +1860,11 @@ h3:hover {
   .side-panel.hide {
     display: none;
   }
+}
+
+.app-wrapper {
+  display: flex;
+  flex-direction: column;
+
+  height: 100%;
 }
